--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
      <!-- Other meta tags and title -->
-     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js">
+     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js">
     </script>
      <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-    </script>
+    </script> -->
      <title>Your React App</title>
 </head>
 <body>
+    <h1>Gaurav is here</h1>
     <div id="root"></div>
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
